# kmti-main

./: .env  .gitignore  ADMIN_ACCESS_FIX_COMPLETE.md  CLEANUP_REPORT.md  COMMENTS_INTEGRATION_FIX_SUMMARY.md  COMPLETE_FIX_DOCUMENTATION.md  CRITICAL_FILE_MANAGEMENT_IMPLEMENTATION.md  CRITICAL_ISSUES_RESOLVED.md  ENHANCED_FILTERING_IMPLEMENTATION.md  FASdiagram.mmd  KMTI_Main_Installer.iss  METADATA_RELOCATION_COMPLETE.md  METADATA_SYNTAX_FIX_COMPLETE.md  NETWORK_ACCESS_SOLUTIONS.md  NETWORK_MIGRATION_SUMMARY.md  README_TESTING.md  README_updated.md  ROLE_LOGIN_FIXES.md  ROLE_SYSTEM_PATCH.md  SYSTEM_STATUS.md  TEAM_LEADER_BYPASS_COMPLETE.md  TEAM_LEADER_BYPASS_SUMMARY.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  THREE_ROLE_IMPLEMENTATION_COMPLETE.md  TLPanel.py  UPDATED_DATATABLE_RESPONSIVENESS.md  WORKFLOW_FIXES_DOCUMENTATION.md  __init__.py  admin_panel.py  analyze_test_results.py  benchmark_kmti_performance.py  check_syntax.py  debug_approval_workflow.py  debug_user_roles.py  implementation_summary.py  installer.iss  kmti_comprehensive_test_fixed.py  login_window.py  main.py  (+17 more)
admin/: activity_logs.py  add_user.py  data_management.py  details_pane.py  file_approval_panel.py  navbar.py  reset_password.py  system_settings.py  user_management.py
backup/: migrate_system_files.py
core/: hybrid_manager.py
data/: .migration_done  active_sessions.json  activity_logs.json  activity_metadata.json  config.json  kmti_hybrid.db  migration_report_20250808.txt  permissions.json  remember_me.json  remembered_users.json  session.json  settings.json  teams.json  test_hybrid.db  (+2 more)
(+208 files in other folders)
